# offboarding-sme-clone

./: .gitignore  LICENSE  PROJECT_PLAN.md  README.md  main.py  pyproject.toml
.agents/rules/: pkg-mgr.md
.github/workflows/: ci.yml
docs/: PRODUCT_SPEC.md  ROADMAP.md
scripts/: indexer.py  setup.py  skill_generator.py  tone_extractor.py
scripts/parsers/: docx_parser.py  email_parser.py  pdf_parser.py  pptx_parser.py  slack_parser.py  xlsx_parser.py
skill_definitions/: claude_code.md  cursor.cursorrules
skill_definitions/antigravity/: skill.md
sme_clone/: indexer.py  setup.py  skill_generator.py  tone_extractor.py
sme_clone/parsers/: docx_parser.py  email_parser.py  pdf_parser.py  slack_parser.py
test-example/: README.md  sample_data.xlsx  sample_doc.docx  sample_emails.mbox  sample_slides.pptx
test-example/.sme-clone/: _INDEX.md  tone_profile.md
test-example/.sme-clone/parsed/docs/: sample_data.md  sample_design_doc.md  sample_doc.md  sample_slides.md
test-example/.sme-clone/parsed/email/: thread_api_redesign.md  thread_api_redesign_-_versioning_strategy.md
test-example/.sme-clone/parsed/slack/: general.md
test-example/.sme-clone/skills/: README.md  api_design_patterns.md
tests/: __init__.py  test_parsers.py
