[project]
name = "offboarding-sme-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lancedb>=0.30.2",
    "langgraph>=1.1.6",
    "ollama>=0.6.1",
    "pydantic-ai>=1.83.0",
    "rich>=15.0.0",
    "textual>=8.2.3",
]
