[project]
name = "offboarding-sme-clone"
version = "0.1.0"
description = "Export a departing engineer's decision-making logic into structured, agent-readable knowledge artifacts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Document parsers
    "python-docx>=1.1.0",       # Word (.docx) parsing
    "python-pptx>=1.0.0",       # PowerPoint (.pptx) parsing
    "openpyxl>=3.1.0",          # Excel (.xlsx) parsing
    "pdfplumber>=0.11.0",       # PDF text extraction

    # CLI output
    "rich>=13.0.0",             # Progress bars and formatted terminal output
]

[tool.setuptools]
packages = ["sme_clone"]

[project.scripts]
sme-clone = "sme_clone.setup:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
